--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@blueprintjs/colors",
+    "name": "blueprintjs-colors",
     "version": "5.0.8",
     "description": "Blueprint color definitions",
     "main": "lib/cjs/index.js",
@@ -29,7 +29,7 @@
         "tslib": "~2.6.2"
     },
     "devDependencies": {
-        "@blueprintjs/node-build-scripts": "workspace:^",
+        "blueprintjs-node-build-scripts": "workspace:^",
         "mocha": "^10.2.0",
         "typescript": "~5.2.2"
     },
